manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-azurefile-service
spec:
  selector:
    app: nginx  # Deployment에서 설정한 app 레이블과 일치해야 함
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP  # 내부 클러스터에서만 접근 가능하도록 설정
