manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-azurefile-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.ce-82075788-sa.kubepia.net  # 도메인 이름을 사번에 맞게 수정
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-azurefile-service  # 위에서 설정한 서비스 이름
            port:
              number: 80
